--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "@suarsan/ngx-keyvalue": [
+        "dist/suarsan/ngx-keyvalue/suarsan-ngx-keyvalue",
+        "dist/suarsan/ngx-keyvalue"
+      ]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
