--- a/projects/suarsan/ngx-keyvalue/package.json
+++ b/projects/suarsan/ngx-keyvalue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@suarsan/ngx-keyvalue",
-  "version": "0.0.7",
+  "version": "0.0.10",
   "keywords": [
     "angular",
     "ngx",
@@ -23,7 +23,8 @@
   },
   "peerDependencies": {
     "@angular/common": "^13.3.0",
-    "@angular/core": "^13.3.0"
+    "@angular/core": "^13.3.0",
+    "rxjs": "~7.5.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
